# tensorflow_dense_op

./: .gitignore  CMakeLists.txt  _dense_grad.py  cuda_op_kernel.cu  dense.cc  dense_tests.py  main.py  readme.md
